--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <!-- Tambahkan ini di dalam <body> setelah tombol -->
   <div id="popup" style="display: none;">
     <div class="popup-content">
-      <h2>💞 Selamat! 💞</h2>
+      <h2>💞 Yeaaayy! 💞</h2>
       <p id="popupText"></p>
       <button onclick="closePopup()">Tutup</button>
     </div>
@@ -149,7 +149,7 @@
         month: 'long',
         year: 'numeric'
       });
-      document.getElementById("popupText").textContent = `Yeaaay! Kita resmi jadian tanggal ${tgl} 💞💘`;
+      document.getElementById("popupText").textContent = `Kita resmi jadian yaaa ${tgl} 💞💘`;
       document.getElementById("popup").style.display = "flex";
       generateHearts();
     });
